--- a/css/index_style.css
+++ b/css/index_style.css
@@ -8,7 +8,7 @@
 }
 
 .img-index-bgi {
-  min-height: 100vh;
+  height: 100vh;
   background-image: url("../img/index/index-bgi.jpg");
   background-position: center top;
   background-repeat: no-repeat;
@@ -17,12 +17,12 @@
 
 .index1 {
   min-height: 100vh;
-  padding-top: 6.25rem;
-  padding-bottom: 6.25rem;
+  padding-top: 10vh;
+  padding-bottom: 10vh;
 }
 
 .index1 .row:nth-child(1) {
-  margin-top: 6.25rem;
+  margin-top: 7.5vh;
 }
 
 .index1 .row:nth-child(2) {
@@ -62,5 +62,52 @@
   border-radius: 1.38rem;
   -webkit-box-shadow: 4px 4px 5px #aaa;
           box-shadow: 4px 4px 5px #aaa;
+}
+
+.dropdown-menu {
+  width: 100vw;
+  background-color: rgba(77, 77, 77, 0.9);
+  top: 95%;
+  left: unset;
+  right: 0;
+  border: unset;
+  border-radius: unset;
+}
+
+.dropdown-menu .dropdown-item {
+  background-color: transparent;
+  display: block;
+  clear: both;
+  text-align: inherit;
+  white-space: pre-wrap;
+}
+
+.dropdown-menu .dropdown-item li {
+  display: inline-block;
+}
+
+@media (max-width: 1199.98px) {
+  .img-index-bgi {
+    background-position-x: 80%;
+  }
+  .index1 .row:nth-child(1) .col {
+    text-align: center;
+  }
+  .index1 .row:nth-child(1) .col img {
+    width: 50vw;
+  }
+  .index1 .row:nth-child(2) {
+    margin-top: unset;
+    margin-bottom: unset;
+  }
+  .index1 .row:nth-child(2) .col p {
+    font-size: 0.625rem;
+    letter-spacing: -0.02rem;
+    line-height: 1.25rem;
+  }
+  .index1 .row:nth-child(3) div:nth-child(2) div {
+    -webkit-transform: scale(0.7);
+            transform: scale(0.7);
+  }
 }
 /*# sourceMappingURL=index_style.css.map */
