--- a/css/index_style.scss
+++ b/css/index_style.scss
@@ -32,7 +32,8 @@ monospace;
 
 
 .img-index-bgi {
-    min-height: 100vh;
+    // min-height: 100vh;
+    height: 100vh;
     background-image: url('../img/index/index-bgi.jpg');
     background-position: center top;
     background-repeat: no-repeat;
@@ -41,17 +42,21 @@ monospace;
 
 .index1 {
     min-height: 100vh;
-    padding-top: 6.25rem;
-    padding-bottom: 6.25rem;
+    // padding-top: 6.25rem;
+    // padding-bottom: 6.25rem;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
 
     .row:nth-child(1) {
-        margin-top: 6.25rem;
+        // margin-top: 6.25rem;
+        margin-top: 7.5vh;
     }
 
     .row:nth-child(2) {
         margin-top: 2.5rem;
         margin-bottom: 8.75rem;
     }
+
 
     p {
         font-size: 1.25rem;
@@ -87,4 +92,66 @@ monospace;
         border-radius: 1.38rem;
         box-shadow: 4px 4px 5px #aaa;
     }
+}
+
+// @media (max-width: 1199.98px)
+.dropdown-menu {
+    width: 100vw;
+    background-color: rgba($color: $navbar-color, $alpha: 0.9);
+    top: 95%;
+    left: unset;
+    right: 0;
+    border: unset;
+    border-radius: unset;
+
+    .dropdown-item {
+        background-color: transparent;
+        display: block;
+        clear: both;
+        text-align: inherit;
+        white-space: pre-wrap;
+
+        li {
+            display: inline-block;
+        }
+    }
+}
+
+@media (max-width: 1199.98px) {
+    .img-index-bgi {
+        background-position-x: 80%;
+    }
+
+    .index1 {
+        .row:nth-child(1) {
+            .col {
+                text-align: center;
+                img {
+                    width: 50vw;
+                }
+            }
+        }
+
+        .row:nth-child(2) {
+            margin-top: unset;
+            margin-bottom: unset;
+            .col {
+                p {
+                    font-size: 0.625rem;
+                    // font-size: 10px;
+                    letter-spacing: -0.02rem;
+                    line-height: 1.25rem;
+                }
+            }
+        }
+
+        .row:nth-child(3) {
+            div:nth-child(2) div {
+                transform: scale(0.7);
+            }
+        }
+
+    }
+
+    // .index2 {}
 }
