--- a/css/index_style.css
+++ b/css/index_style.css
@@ -58,7 +58,7 @@
   padding-bottom: 6.25rem;
 }
 
-.index2 .col-2 img {
+.index2 img {
   border-radius: 1.38rem;
   -webkit-box-shadow: 4px 4px 5px #aaa;
           box-shadow: 4px 4px 5px #aaa;
@@ -88,6 +88,7 @@
 
 @media (max-width: 1199.98px) {
   .img-index-bgi {
+    height: 100%;
     background-position-x: 80%;
   }
   .index1 .row:nth-child(1) .col {
@@ -101,13 +102,11 @@
     margin-bottom: unset;
   }
   .index1 .row:nth-child(2) .col p {
-    font-size: 0.625rem;
-    letter-spacing: -0.02rem;
+    letter-spacing: 0rem;
     line-height: 1.25rem;
   }
   .index1 .row:nth-child(3) div:nth-child(2) div {
-    -webkit-transform: scale(0.7);
-            transform: scale(0.7);
+    display: none;
   }
 }
 /*# sourceMappingURL=index_style.css.map */
