--- a/css/main_style.scss
+++ b/css/main_style.scss
@@ -134,12 +134,17 @@ span {
 
     // 公里數
     .row:nth-child(3) {
-        margin-top: 9.375rem;
+        // margin-top: 9.375rem;
+        margin-top: 13%;
     }
+
+    // .row:nth-child(4) {
+    //     bottom: 0;
+    // }
 
     // 路線圖(含起迄站牌)
     .img-main-line {
-        margin-top: 8.125rem;
+        // margin-top: 8.125rem;
         position: absolute;
         z-index: 1;
     }
