--- a/css/Shal_style.scss
+++ b/css/Shal_style.scss
@@ -24,17 +24,17 @@ monospace;
 // 版型A
 .section3 {
     min-height: 100vh;
-    padding-top: 6.25rem;
-    padding-bottom: 6.25rem;
+    padding-top: 9.26vh;
+    padding-bottom: 9.26vh;
 
     // 滿版圖片
     .row:nth-child(2) {
-        margin-top: 4.6875rem;
+        margin-top: 6.95vh;
     }
 
     // 滿版內文
     .text-Shal-chime01 {
-        margin-top: 4.6875rem;
+        margin-top: 6.95vh;
         letter-spacing: 0.4rem;
         line-height: 3.15rem;
     }
@@ -43,8 +43,8 @@ monospace;
 // 版型B
 .section4 {
     min-height: 100vh;
-    padding-top: 6.25rem;
-    padding-bottom: 6.25rem;
+    padding-top: 9.26vh;
+    padding-bottom: 9.26vh;
 
     // 滿版圖片
     img {
@@ -69,12 +69,12 @@ monospace;
 // 版型C
 .section5 {
     min-height: 100vh;
-    padding-top: 6.25rem;
-    padding-bottom: 6.25rem;
+    padding-top: 9.26vh;
+    padding-bottom: 9.26vh;
 
     // 4欄位兩行標題
     .col-4>div:nth-child(2) {
-        margin-top: 2.5rem;
+        margin-top: 3.71vh;
     }
 
     // 6欄位內文
@@ -85,6 +85,6 @@ monospace;
 
     // 滿版圖片
     .row:nth-child(2) {
-        margin-top: 5rem;
+        margin-top: 7.41vh;
     }
 }
